fixed navbar spacing

--- a/src/components/shared/sidenav.module.scss
+++ b/src/components/shared/sidenav.module.scss
@@ -32,7 +32,7 @@
   .outerBtn {
     padding: 0 1em;
     @include gt-lg {
-      padding: 1em 0;
+      padding: 0.4em 0;
     }
     display: flex;
   }
